Section updates and styles
What your workflow is like.

I added in a few styles for the sections, and also altered a few of the sections and how they're structured and allow for different content and consideration for responsiveness. I will then add in content in the theme editor, make a pull from the theme, and then tweak the sections and style and update the structure of the header following this.

What was challenging / what wasn’t? (Please be honest here. If something is challenging, that’s ok and it will just help us see where our strengths and weaknesses might fit with yours and vice versa.)

I decided, for the image and columns section, to utilize Shopify's new blocks system. I took a bit of time to refresh myself to re-learn this, but I since the blocks do ask for a single link and a collection list, for the sets of links, I thought it was a great opportunity. I used private blocks so they're only designated to the column block.

Any general decisions you make along the way.

I updated the image and columns sections to accommodate Shopify's new blocks system.

What would you discuss with a designer through the process?

I would say, the image quality needs to be better. The images are coming in a little more pixelated than I would like.

What are a few code decisions you made and why?

I added in some conditions in the hero section I built to allow for the user to update the height of the image. I also added a desktop and mobile option, as the images are a little different in the design from each other. I also did something similar for the image and text to allow for different image heights for desktop and mobile screens, as I noticed the image was much shorter on mobile, compared to desktop. Essentially giving the user more flexibility to make more style fixes. I also added the user the option to change the background colour of the icons and columns section, and also allowed the option for a head, just in case.

--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -1,15 +1,55 @@
 {{ 'section-hero.css' | asset_url |  stylesheet_tag  }}
 
 <style>
-    #hero-{{ section.id }}{
-        height: {{ section.settings.hero_height }}vh;
-    }
+    {% if section.settings.bg_image_mobile != blank %}
+        #hero-{{ section.id }} .hero-image-mobile-container{
+            height: {{ section.settings.hero_height_mobile }}dvh;
+        }
+        .hero .hero-image-desktop-container{
+            display: none;    
+        }
+        .hero .hero-image-mobile-container{
+            display: block;    
+        }
+        @media (min-width: 750px){
+            #hero-{{ section.id }}{
+                height: {{ section.settings.hero_height_desktop }}vh;
+            }
+            .hero .hero-image-desktop-container{
+                display: block;    
+            }
+            .hero .hero-image-mobile-container{
+                display: none;    
+            }
+        }
+    {% else %}
+        #hero-{{ section.id }} .hero-image-desktop-container{
+            height: {{ section.settings.hero_height_mobile }}dvh;
+        }
+        @media (min-width: 750px){
+            #hero-{{ section.id }} .hero-image-desktop-container{
+                height: auto;
+            }
+            #hero-{{ section.id }}{
+                height: {{ section.settings.hero_height_desktop }}vh;
+            }
+        }
+    {% endif %}
 </style>
 
 <section id="hero-{{ section.id }}">
-    {{ section.settings.bg_image | image_url: width: 3000 | image_tag: loading: 'lazy', sizes: sizes, widths: '550, 720, 990, 1100, 1500, 2200, 3000', alt: section.settings.bg_image.alt, class: 'hero-image' }}
-    <div class="page-width center">
-        <div class="hero-content">
+    {% if section.settings.bg_image_desktop != blank %}
+        <div class="hero-image-desktop-container">
+            {{ section.settings.bg_image_desktop | image_url: width: 3000 | image_tag: loading: 'lazy', sizes: sizes, widths: '550, 720, 990, 1100, 1500, 2200, 3000', alt: section.settings.bg_image.alt, class: 'hero-image hero-image-desktop' }}
+        </div>
+    {% endif %}
+    {% if section.settings.bg_image_mobile != blank %}
+        <div class="hero-image-mobile-container">
+            {{ section.settings.bg_image_mobile | image_url: width: 3000 | image_tag: loading: 'lazy', sizes: sizes, widths: '550, 720, 990, 1100, 1500, 2200, 3000', alt: section.settings.bg_image.alt, class: 'hero-image hero-image-mobile' }}
+        </div>
+    {% endif %}
+    <div class="page-width">
+        <div class="hero-content center">
             <div>
                 {% if section.settings.subtitle != blank %}
                     <h2>{{ section.settings.subtitle }}</h2>
@@ -21,7 +61,7 @@
             <div class="button-group">
                 {% for block in section.blocks %}
                     {% if block.settings.button_link != blank and block.settings.button_style != blank %}
-                        <a href="{{ block.settings.button_link }}" class="btn {{ block.settings.button_style }}">
+                        <a href="{{ block.settings.button_link }}" class="button button--{{ block.settings.button_style }}">
                             {{ block.settings.button_text }}
                         </a>
                     {% endif %}
@@ -42,13 +82,28 @@
             },
             {
                 "type": "image_picker",
-                "id": "bg_image",
-                "label": "Background Image"
+                "id": "bg_image_desktop",
+                "label": "Desktop - Background Image"
             },
             {
                 "type": "range",
-                "id": "hero_height",
-                "label": "Hero Height",
+                "id": "hero_height_desktop",
+                "label": "Desktop - Hero Height",
+                "default": 50,
+                "min": 0,
+                "max": 100,
+                "step": 1,
+                "unit": "vh"
+            },
+            {
+                "type": "image_picker",
+                "id": "bg_image_mobile",
+                "label": "Mobile - Background Image"
+            },
+            {
+                "type": "range",
+                "id": "hero_height_mobile",
+                "label": "Mobile - Hero Height",
                 "default": 50,
                 "min": 0,
                 "max": 100,
