--- a/sections/icon-text-columns.liquid
+++ b/sections/icon-text-columns.liquid
@@ -1,21 +1,44 @@
 {{ 'section-icon-text-columns.css' | asset_url |  stylesheet_tag  }}
 
+<style>
+    #icon-text-columns-{{ section.id }}{
+        background: {{ section.settings.bg_color }};
+    }
+</style>
+
 <section id="icon-text-columns-{{ section.id }}">
     <div class="page-width">
-        {% for block in section.blocks %}
-            <div class="column">
-                {{ block.settings.icon | image_url: width: 3000 | image_tag: loading: 'lazy', sizes: sizes, widths: '550, 720, 990, 1100, 1500, 2200, 3000', alt: block.settings.image.alt, class: 'image' }}
-                {% if block.settings.title != blank %}
-                    <h2>{{ block.settings.title }}</h2>
-                {% endif %}
-            </div>
-        {% endfor %}
+        {% if section.settings.title != blank %}
+            <h2 class="center">{{ section.settings.title }}</h2>
+        {% endif %}
+        <div class="columns">
+            {% for block in section.blocks %}
+                <div class="column">
+                    {{ block.settings.icon | image_url: width: 3000 | image_tag: loading: 'lazy', sizes: sizes, widths: '550, 720, 990, 1100, 1500, 2200, 3000', alt: block.settings.image.alt, class: 'image' }}
+                    {% if block.settings.description != blank %}
+                        <p class="center">{{ block.settings.description }}</p>
+                    {% endif %}
+                </div>
+            {% endfor %}
+        </div>
     </div>
 </section>
 {% schema %}
     {
         "name": "Icon Text Columns",
         "class": "icon-text-columns",
+        "settings": [
+            {
+                "type": "text",
+                "id": "title",
+                "label": "Title"
+            },
+            {
+                "type": "color_background",
+                "id": "bg_color",
+                "label": "Background Color"
+            }
+        ],
         "blocks": [
             {
                 "name": "Column",
@@ -29,8 +52,8 @@
                     },
                     {
                         "type": "text",
-                        "id": "title",
-                        "label": "Title"
+                        "id": "description",
+                        "label": "Description"
                     }
                 ]
             }
