--- a/blocks/_collection-list.liquid
+++ b/blocks/_collection-list.liquid
@@ -1,23 +1,27 @@
-{% if block.settings.collections.size > 1 %}
+{% if block.settings.collections.count > 1 %}
     <style>
         .collection-link{
             border-right: 1px solid #000;
-            margin-right: 10px;
-            padding-right: 10px;
+            margin-right: 12px;
+            padding-right: 12px;
         }
         .collection-link:last-child{
             border: none;
             margin-right: 0;
             padding-right: 0;
         }
+        @media (min-width: 750px){
+            .collection-link{
+                margin-right: 24px;
+                padding-right: 24px;
+            }
+        }
     </style>
 {% endif %}
 
 <div>
     {% for collection in block.settings.collections %}
-        <a href="{{ collection.url }}" class="collection-link">
-            {{ collection.title }}
-        </a>
+        <a href="{{ collection.url }}" class="collection-link">{{ collection.title }}</a>
     {% endfor %}
 </div>
 
