--- a/sections/image-and-text.liquid
+++ b/sections/image-and-text.liquid
@@ -13,7 +13,7 @@
     }
 </style>
 
-<section id="image-and-text-{{ section.id }}">
+<section id="image-and-text-{{ section.id }}" class="section">
     <div>
         {% if section.settings.bg_image != blank %}
             <div class="image-and-text--image">
