--- a/sections/image-text-columns.liquid
+++ b/sections/image-text-columns.liquid
@@ -1,6 +1,6 @@
 {{ 'section-image-text-columns.css' | asset_url |  stylesheet_tag  }}
 
-<section id="image-and-text-columns-{{ section.id }}" class="image-and-text-columns">
+<section id="image-and-text-columns-{{ section.id }}" class="image-and-text-columns section">
     <div class="page-width">
         <div class="columns">
             {% content_for 'blocks' %}
