--- a/assets/base.css
+++ b/assets/base.css
@@ -652,7 +652,7 @@ h6:empty {
   text-underline-offset: 0.3rem;
   color: rgb(var(--color-link));
   background-color: transparent;
-  font-size: 1.4rem;
+  font-size: 14px;
   font-family: inherit;
 }
 
@@ -1863,7 +1863,7 @@ details[open] > .share-button__fallback {
 .customer .field input:focus ~ label,
 .customer .field input:not(:placeholder-shown) ~ label,
 .customer .field input:-webkit-autofill ~ label {
-  font-size: 1rem;
+  font-size: 0.75rem;
   top: calc(var(--inputs-border-width) + 0.5rem);
   left: calc(var(--inputs-border-width) + 2rem);
   letter-spacing: 0.04rem;
@@ -2212,17 +2212,17 @@ product-info .loading-overlay:not(.hidden) ~ *,
 
 .cart-count-bubble {
   position: absolute;
-  background-color: rgb(var(--color-button));
+  background-color: var(--gradient-base-accent-2);
   color: rgb(var(--color-button-text));
-  height: 1.7rem;
-  width: 1.7rem;
+  height: 15px;
+  width: 15px;
   border-radius: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 0.9rem;
-  bottom: 0.8rem;
-  left: 2.2rem;
+  top: 0.3rem;
+  left: 30px;
   line-height: calc(1 + 0.1 / var(--font-body-scale));
 }
 
@@ -2294,11 +2294,18 @@ product-info .loading-overlay:not(.hidden) ~ *,
 
 /* Main Header Layout */
 .header-wrapper {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
   background-color: rgb(var(--color-background));
+  min-height: 65px;
 }
-
+@media (min-width: 990px){
+  .header-wrapper {
+    min-height: 145px;
+  }
+}
 .header-wrapper--border-bottom {
   border-bottom: 0.1rem solid rgba(var(--color-foreground), 0.08);
 }
@@ -2307,7 +2314,7 @@ product-info .loading-overlay:not(.hidden) ~ *,
   display: grid;
   grid-template-areas: 'left-icons heading icons';
   grid-template-columns: 1fr 2fr 1fr;
-  align-items: center;
+  align-items: end;
 }
 
 @media screen and (max-width: 749px) {
@@ -2339,7 +2346,7 @@ product-info .loading-overlay:not(.hidden) ~ *,
 
   .header--middle-left {
     grid-template-areas: 'heading navigation icons';
-    grid-template-columns: auto auto 1fr;
+    grid-template-columns: auto auto auto;
     column-gap: 2rem;
   }
 
@@ -2462,6 +2469,7 @@ product-info .loading-overlay:not(.hidden) ~ *,
   display: flex;
   grid-area: icons;
   justify-self: end;
+  align-items: center;
 }
 
 .header__icons .shopify-app-block {
@@ -2646,7 +2654,7 @@ details[open] .modal-overlay::after {
 
 @media screen and (min-width: 990px) {
   .search-modal__form {
-    max-width: 74.2rem;
+    max-width: 193px;
   }
 
   .search-modal__close-button {
