--- a/assets/section-hero.css
+++ b/assets/section-hero.css
@@ -23,11 +23,14 @@
     font-size: 36px;
     line-height: 100%;
     letter-spacing: 1.71px;
+    margin-top: 0;
+    margin-bottom: 23px;
 }
 .hero .hero-content h2{
     font-size: 14px;
     line-height: 100%;
     letter-spacing: 0.88px;
+    margin-bottom: 13px;
 }
 .hero .button-group{
     display: grid;
@@ -59,11 +62,13 @@
         font-size: 80px;
         line-height: 100%;
         letter-spacing: 5px;
+        margin-bottom: 47px;
     }
     .hero .hero-content h2{
         font-size: 20px;
         line-height: 100%;
         letter-spacing: 1.25px;
+        margin-bottom: 28px;
     }
     .hero .button-group{
         display: flex;
