--- a/assets/section-icon-text-columns.css
+++ b/assets/section-icon-text-columns.css
@@ -1,6 +1,3 @@
-.icon-text-columns{
-    padding: 59px 0 53px;
-}
 .icon-text-columns .columns{
     display: flex;
     flex-direction: column;
@@ -18,13 +15,13 @@
     width: max-content
 }
 .icon-text-columns .columns .column p{
-    max-width: 191px;
+    max-width: 140px;
     font-weight: 700;
-    font-size: 20px;
-    line-height: 28px;
-    letter-spacing: 1px;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.8px;
     text-align: center;
-
+    color: #000;
 }
 @media (min-width: 750px){
     .icon-text-columns .columns{
@@ -35,5 +32,11 @@
     }
     .icon-text-columns .columns .column{
         max-width: 33.3%;
+    }
+    .icon-text-columns .columns .column p{
+        max-width: 191px;
+        font-size: 20px;
+        line-height: 28px;
+        letter-spacing: 1px;
     }
 }
