--- a/sections/cart-icon-bubble.liquid
+++ b/sections/cart-icon-bubble.liquid
@@ -1,10 +1,4 @@
-{%- liquid
-  if cart == empty
-    render 'icon-cart-empty'
-  else
-    render 'icon-cart'
-  endif
--%}
+<img src="{{ "cart-icon.png" |  asset_url }}" alt="Cart" class="cart-icon"/>
 <span class="visually-hidden">{{ 'templates.cart.cart' | t }}</span>
 {%- if cart != empty -%}
   <div class="cart-count-bubble">
